# liaison

./: .gitignore  Makefile  Makefile.local  PACKAGE_README.md  README.en.md  README.md  README_CN.md  README_EN.md  README_ZH.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md  entry.yaml  go.mod  go.sum  package-lock.json
.github/: go.yml
.github/workflows/: desktop-client-macos.yml  desktop-client-windows.yml
api/v1/: liaison.pb.go  liaison.proto  liaison_grpc.pb.go  liaison_http.pb.go
cmd/edge/: main.go
cmd/manager/: main.go
deploy/docker/: .env.example  Dockerfile.frontier  Dockerfile.liaison  README.md  docker-compose.release.yaml  docker-compose.yaml  entrypoint-frontier.sh  entrypoint-liaison.sh  load.sh  package-docker.sh  uninstall.sh
desktop-client/: index.html  package.json  pnpm-lock.yaml
desktop-client/src/: App.css  App.tsx  i18n.ts
desktop-client/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop-client/src-tauri/capabilities/: default.json
desktop-client/src-tauri/icons/: icon.icns
desktop-client/src-tauri/resources/: .gitkeep
desktop-client/src-tauri/src/: api_client.rs  auth.rs  cli_detector.rs  edge_supervisor.rs  lib.rs  main.rs  state.rs  status_poller.rs
docs/: biz_sequence.md
docs/swagger/: docs.go  swagger.json  swagger.yaml
etc/: liaison-edge.yaml  liaison.yaml
images/: Dockerfile.build-linux  Dockerfile.liaison-api  Dockerfile.liaison-swagger
pkg/edge/: edge.go
pkg/entry/: entry.go
pkg/lerrors/: lerrors.go
pkg/liaison/: liaison.go
pkg/proto/: proto.go
pkg/utils/: dial.go  fingerprint.go  jwt.go  limit.go  limit_windows.go  listen.go  mac.go  password.go  physical_interface.go  physical_interface_windows.go  (+1 more)
tools/: README.md
web/: .gitignore  .npmrc  .umirc.ts  ENTRY_POINT.md  PROJECT_STRUCTURE.md  README.md  debug.html  global.less  index.html  minimal-test.html  package-lock.json  package.json  pnpm-lock.yaml  simple-test.html  simple.html  start.sh  tailwind.config.js  test.html  交付文档.md
website/: README.md  index.html  sitemap.xml
(+191 files in other folders)
